# sophia

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.gui  Dockerfile.gui.base  Dockerfile.gui.cuda  LICENSE  Makefile  README.md  docker-compose.gui.yml  docker-compose.yml  pyproject.toml
.gitlab/issue_templates/: bug-report.md  feature-request.md  task.md
ci/: Dockerfile.ci  Dockerfile.cuda-base
src/sophia/: __init__.py  __main__.py  config.py
src/sophia/adapters/: auth.py  embedder.py  knowledge_store.py  lecture_downloader.py  lecturetube.py  moodle.py  tiss.py  tiss_registration.py  topic_extractor.py  transcriber.py
src/sophia/cli/: _output.py  _resolver.py  auth.py  books.py  db.py  deadlines.py  gui.py  jobs.py  lectures.py  plan.py  quickstart.py  register.py  run_job.py  status.py  study.py
src/sophia/domain/: errors.py  events.py  models.py  ports.py
src/sophia/gui/: __init__.py  app.py  layout.py
src/sophia/gui/components/: chart_table.py  confidence_rating.py  course_overview.py  course_selector.py  error_boundary.py  error_display.py  flashcard.py  (+5 more)
src/sophia/infra/: di.py  http.py  logging.py  persistence.py  scheduler.py
src/sophia/services/: athena_chronos.py  athena_confidence.py  athena_export.py  athena_reconciliation.py  athena_review.py  athena_session.py  athena_study.py  chronos.py  chronos_export.py  hermes_download.py  hermes_index.py  hermes_manage.py  hermes_pipeline.py  hermes_setup.py  hermes_transcribe.py  job_runner.py  material_index.py  pipeline.py  reference_extractor.py  registration.py  resource_classifier.py
tests/: conftest.py
tests/fixtures/: assignment_detail.html  assignment_index.html  book_index.html  grade_report.html  page_index.html  resource_index.html  url_index.html
tests/integration/gui/: conftest.py  test_accessibility.py  test_dashboard.py  test_navigation.py  test_review_flow.py  test_search_flow.py  test_smoke_hermes_wizard.py  test_smoke_tier2.py  test_study_flow.py
tests/unit/: test_adaptive_difficulty.py  test_athena_chronos.py  test_athena_confidence.py  test_athena_export.py  test_athena_models.py  test_athena_reconciliation.py  test_athena_review.py  test_athena_session.py  test_athena_study.py  test_auth.py  test_chronos.py  test_cli_flags.py  test_cli_jobs.py  test_cli_lectures.py  test_embedder.py  test_fsrs_review.py  test_hermes_download.py  test_hermes_index.py  test_hermes_manage.py  test_hermes_pipeline.py  test_hermes_setup.py  test_hermes_transcribe.py  test_http.py  test_job_runner.py  test_knowledge_store.py  test_lecture_downloader.py  test_lecturetube_adapter.py  test_material_index.py  test_material_models.py  test_migrator.py  test_models.py  test_moodle_adapter.py  test_persistence.py  test_pipeline.py  test_quickstart.py  test_quiz_cli.py  test_reference_extractor.py  test_registration_models.py  test_registration_service.py  test_reliability.py  (+12 more)
tests/unit/gui/: conftest.py  test_accessibility.py  test_app.py  test_calibration.py  test_calibration_service.py  test_chronos.py  test_chronos_service.py  test_components.py  test_course_overview.py  test_course_selector.py  test_course_state.py  test_dashboard.py  test_discover_lectures.py  test_error_display.py  test_error_service.py  test_health.py  test_hermes_service.py  test_job_registry.py  test_layout.py  test_lectures.py  test_lectures_setup.py  test_math_input.py  test_overview_service.py  test_pipeline_service.py  test_quickstart.py  test_quickstart_service.py  test_register.py  test_registration_service.py  test_review.py  test_review_card.py  test_review_service.py  test_search.py  test_search_service.py  test_session_health.py  test_session_store.py  test_settings.py  test_settings_jobs.py  test_storage_map.py  test_study.py  test_study_service.py  (+2 more)
(+58 files in other folders)
