[project]
name = "sophia"
version = "0.1.0"
description = "Σοφία — A student toolkit for TU Wien's TUWEL: books, deadlines, exams"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "isbnlib>=3.10",
    "tenacity>=8.0",
    "aiosqlite>=0.20",
    "textual>=0.80",
    "rich>=13.0",
    "cyclopts>=3.0",
    "structlog>=24.0",
    "platformdirs>=4.0",
    "keyring>=25.0",
    "icalendar>=7.0.3",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0",
    "groq>=0.4",
]
pdf = [
    "pymupdf>=1.24",
]
reports = []
calibre = []
export = [
    "bibtexparser>=1.4",
]
web = [
    "nicegui>=2.0",
]
hermes = [
    "faster-whisper>=1.1",
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    "openai>=1.50",
]
athena = [
    "genanki>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "respx>=0.21",
    "textual-dev>=1.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest-cov>=5.0",
    "pip-audit>=2.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
    "axe-playwright-python>=0.1",
]

[project.scripts]
sophia = "sophia.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: End-to-end GUI tests requiring Playwright"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
# Tests legitimately access private helpers for white-box testing
reportPrivateUsage = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnusedFunction = false

[tool.coverage.run]
omit = ["src/sophia/__main__.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sophia"]
